--- a/hparams/ROME/llama-7b.yaml
+++ b/hparams/ROME/llama-7b.yaml
@@ -1,8 +1,8 @@
 alg_name: "ROME"
-model_name: "./hugging_cache/llama-2-7b"
+model_name: "meta-llama/Llama-2-7b-chat-hf"
 stats_dir: "./data/stats"
 device: 0
-layers: [5]
+layers: [15]
 fact_token: "subject_last"
 v_num_grad_steps: 25
 v_lr: 5e-1
