--- a/hparams/ROME/llama3-8b.yaml
+++ b/hparams/ROME/llama3-8b.yaml
@@ -21,7 +21,7 @@ lm_head_module: "lm_head"
 mom2_dataset: "wikipedia"
 mom2_n_samples: 100000
 mom2_dtype: "float32"
-model_parallel: True
+model_parallel: False
 fp16: false
 
 #alg_name: "ROME"
