--- a/hparams/DINM/llama-7b.yaml
+++ b/hparams/DINM/llama-7b.yaml
@@ -30,5 +30,5 @@ layer_module_tmp: 'model.layers.{}'
 mlp_module_tmp: 'model.layers.{}.mlp'
 attn_module_tmp: 'model.layers.{}.self_attn'
 ln_f_module: 'model.norm'
-lm_head_module: 'lm_head'
+lm_head_module: 'lm_head'y
 model_parallel: false
